WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
139023
[GTK] WebKitWebView is created with the wrong web context when using webkit_web_view_new_with_related_view()
https://bugs.webkit.org/show_bug.cgi?id=139023
Summary
[GTK] WebKitWebView is created with the wrong web context when using webkit_w...
Carlos Garcia Campos
Reported
2014-11-24 02:58:45 PST
The WebKitWebContext is a construct only property, so it's always set to the default value when not provided, during the construction. When a related-view is used to create a new web view we should ensure that the same web context is used for the new web view, instead of the default. We should also ignore any web context given as construct parameter if a related view is alos provided.
Attachments
Patch
(6.04 KB, patch)
2014-11-24 03:03 PST
,
Carlos Garcia Campos
svillar
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2014-11-24 03:03:01 PST
Created
attachment 242154
[details]
Patch
WebKit Commit Bot
Comment 2
2014-11-24 03:05:49 PST
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Sergio Villar Senin
Comment 3
2014-11-24 03:13:11 PST
Comment on
attachment 242154
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=242154&action=review
> Source/WebKit2/ChangeLog:13 > + context given as construct parameter if a related view is alos provided.
Nit: alos->also
Carlos Garcia Campos
Comment 4
2014-11-24 03:18:46 PST
Committed
r176513
: <
http://trac.webkit.org/changeset/176513
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug